# ComfyUI-CRZnodes

./: .gitignore  LICENSE  README.md  __init__.py  boolean_toggle.py  compare.py  custom_dropdown.py  dashboard.py  dashboard_node.py  dropdown.py  execute_block.py  execute_switch.py  float_slider.py  float_to_int.py  image_selector.py  int_to_float.py  integer_slider.py  label.py  map_dropdown.py  passthrough.py  preferences.py  pyproject.toml  string_node.py  switch.py
js/: BooleanToggle.js  CRZConfig.js  CRZPreferences.js  Compare.js  CustomDropdown.js  Dashboard.js  DashboardNode.js  Dropdown.js  ExecuteBlock.js  ExecuteSwitch.js  FloatSlider.js  FloatToInt.js  ImageSelector.js  IntToFloat.js  IntegerSlider.js  Label.js  MapDropdown.js  MaskDetect.js  Passthrough.js  ResizeImageMask.js  SamClickSegment.js  StringNode.js  Switch.js  maskEditor.js
